--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,9 @@ services:
     build: .
     stdin_open: true  # docker run -i
     tty: true         # docker run -t
+    volumes:
+      - home:/home/edwin
     env_file:
       - .env
+volumes:
+  home:
