--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     stdin_open: true  # docker run -i
     tty: true         # docker run -t
     volumes:
-      - home:/home/edwin
+      - dev:/root/dev
     env_file:
       - .env
 volumes:
-  home:
+  dev:
